// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates 5nodes raft no-TM cakeshop docker config 1`] = `
Object {
  "containerPorts": Object {
    "dockerSubnet": "172.16.239.0/24",
    "quorum": Object {
      "p2pPort": 21000,
      "raftPort": 50400,
      "rpcPort": 8545,
      "wsPort": 8645,
    },
    "tm": Object {
      "p2pPort": 9000,
      "thirdPartyPort": 9080,
    },
  },
  "network": Object {
    "cakeshop": "0.11.0",
    "cakeshopPort": "8999",
    "configDir": "network/5-nodes-raft-docker-compose/resources",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "docker-compose",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "5-nodes-raft-docker-compose",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "none",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "172.16.239.11",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "172.16.239.12",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "172.16.239.13",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "172.16.239.14",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "172.16.239.15",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
    },
  ],
}
`;

exports[`creates 5nodes raft no-TM config 1`] = `
Object {
  "containerPorts": undefined,
  "network": Object {
    "cakeshop": "none",
    "cakeshopPort": "8999",
    "configDir": "network/5-nodes-raft-bash/resources",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "5-nodes-raft-bash",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "none",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
    },
  ],
}
`;

exports[`creates 6nodes raft custom config 1`] = `
Object {
  "containerPorts": undefined,
  "network": Object {
    "cakeshop": "none",
    "cakeshopPort": "8999",
    "configDir": "network/6-nodes-raft-tessera-bash/resources",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": true,
    "genesisFile": "",
    "name": "6-nodes-raft-tessera-bash",
    "networkId": 10,
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "0.10.5",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "graphQlPort": 24005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
  ],
}
`;

exports[`creates 6nodes raft custom docker config 1`] = `
Object {
  "containerPorts": Object {
    "dockerSubnet": "172.16.239.0/24",
    "quorum": Object {
      "p2pPort": 21000,
      "raftPort": 50400,
      "rpcPort": 8545,
      "wsPort": 8645,
    },
    "tm": Object {
      "p2pPort": 9000,
      "thirdPartyPort": 9080,
    },
  },
  "network": Object {
    "cakeshop": "none",
    "cakeshopPort": "8999",
    "configDir": "network/6-nodes-raft-tessera-docker-compose/resources",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "docker-compose",
    "generateKeys": true,
    "genesisFile": "",
    "name": "6-nodes-raft-tessera-docker-compose",
    "networkId": 10,
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "0.10.5",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "172.16.239.11",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "ip": "172.16.239.101",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "172.16.239.12",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "ip": "172.16.239.102",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "172.16.239.13",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "ip": "172.16.239.103",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "172.16.239.14",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "ip": "172.16.239.104",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "172.16.239.15",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "ip": "172.16.239.105",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "graphQlPort": 24005,
        "ip": "172.16.239.16",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "ip": "172.16.239.106",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul cakeshop config 1`] = `
Object {
  "containerPorts": undefined,
  "network": Object {
    "cakeshop": "0.11.0",
    "cakeshopPort": "8999",
    "configDir": "network/7-nodes-istanbul-tessera-bash/resources",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "7-nodes-istanbul-tessera-bash",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "0.10.5",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "graphQlPort": 24005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "graphQlPort": 24006,
        "ip": "127.0.0.1",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9007,
        "thirdPartyPort": 9087,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul config 1`] = `
Object {
  "containerPorts": undefined,
  "network": Object {
    "cakeshop": "none",
    "cakeshopPort": "8999",
    "configDir": "network/7-nodes-istanbul-tessera-bash/resources",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "7-nodes-istanbul-tessera-bash",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "0.10.5",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "graphQlPort": 24005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "graphQlPort": 24006,
        "ip": "127.0.0.1",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9007,
        "thirdPartyPort": 9087,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul docker config 1`] = `
Object {
  "containerPorts": Object {
    "dockerSubnet": "172.16.239.0/24",
    "quorum": Object {
      "p2pPort": 21000,
      "raftPort": 50400,
      "rpcPort": 8545,
      "wsPort": 8645,
    },
    "tm": Object {
      "p2pPort": 9000,
      "thirdPartyPort": 9080,
    },
  },
  "network": Object {
    "cakeshop": "none",
    "cakeshopPort": "8999",
    "configDir": "network/7-nodes-istanbul-tessera-docker-compose/resources",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "docker-compose",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "7-nodes-istanbul-tessera-docker-compose",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "0.10.5",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "172.16.239.11",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "ip": "172.16.239.101",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "172.16.239.12",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "ip": "172.16.239.102",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "172.16.239.13",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "ip": "172.16.239.103",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "172.16.239.14",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "ip": "172.16.239.104",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "172.16.239.15",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "ip": "172.16.239.105",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "graphQlPort": 24005,
        "ip": "172.16.239.16",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "ip": "172.16.239.106",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "graphQlPort": 24006,
        "ip": "172.16.239.17",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
      "tm": Object {
        "ip": "172.16.239.107",
        "p2pPort": 9007,
        "thirdPartyPort": 9087,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul kubernetes config 1`] = `
Object {
  "containerPorts": Object {
    "dockerSubnet": "",
    "quorum": Object {
      "p2pPort": 21000,
      "raftPort": 50400,
      "rpcPort": 8545,
      "wsPort": 8645,
    },
    "tm": Object {
      "p2pPort": 9000,
      "thirdPartyPort": 9080,
    },
  },
  "network": Object {
    "cakeshop": "none",
    "cakeshopPort": "8999",
    "configDir": "network/7-nodes-istanbul-tessera-kubernetes/resources",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "kubernetes",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "7-nodes-istanbul-tessera-kubernetes",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "0.10.5",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "graphQlPort": 24005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "graphQlPort": 24006,
        "ip": "127.0.0.1",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9007,
        "thirdPartyPort": 9087,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul no-TM custom config 1`] = `
Object {
  "containerPorts": undefined,
  "network": Object {
    "cakeshop": "none",
    "cakeshopPort": "8999",
    "configDir": "network/7-nodes-istanbul-bash/resources",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": true,
    "genesisFile": "",
    "name": "7-nodes-istanbul-bash",
    "networkId": 12,
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "none",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "graphQlPort": 24005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "graphQlPort": 24006,
        "ip": "127.0.0.1",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul no-TM custom docker config 1`] = `
Object {
  "containerPorts": Object {
    "dockerSubnet": "172.16.239.0/24",
    "quorum": Object {
      "p2pPort": 21000,
      "raftPort": 50400,
      "rpcPort": 8545,
      "wsPort": 8645,
    },
    "tm": Object {
      "p2pPort": 9000,
      "thirdPartyPort": 9080,
    },
  },
  "network": Object {
    "cakeshop": "none",
    "cakeshopPort": "8999",
    "configDir": "network/7-nodes-istanbul-docker-compose/resources",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "docker-compose",
    "generateKeys": false,
    "genesisFile": "",
    "name": "7-nodes-istanbul-docker-compose",
    "networkId": 10,
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "none",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "172.16.239.11",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "172.16.239.12",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "172.16.239.13",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "172.16.239.14",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "172.16.239.15",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "graphQlPort": 24005,
        "ip": "172.16.239.16",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "graphQlPort": 24006,
        "ip": "172.16.239.17",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
    },
  ],
}
`;

exports[`creates 7nodes raft kubernetes custom config 1`] = `
Object {
  "containerPorts": Object {
    "dockerSubnet": "",
    "quorum": Object {
      "p2pPort": 21000,
      "raftPort": 50400,
      "rpcPort": 8545,
      "wsPort": 8645,
    },
    "tm": Object {
      "p2pPort": 9000,
      "thirdPartyPort": 9080,
    },
  },
  "network": Object {
    "cakeshop": "none",
    "cakeshopPort": "8999",
    "configDir": "network/7-nodes-raft-tessera-kubernetes/resources",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "kubernetes",
    "generateKeys": true,
    "genesisFile": "",
    "name": "7-nodes-raft-tessera-kubernetes",
    "networkId": 14,
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "0.10.5",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "graphQlPort": 24003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "graphQlPort": 24004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "graphQlPort": 24005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "graphQlPort": 24006,
        "ip": "127.0.0.1",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9007,
        "thirdPartyPort": 9087,
      },
    },
  ],
}
`;

exports[`creates quickstart config 1`] = `
Object {
  "containerPorts": undefined,
  "network": Object {
    "cakeshop": "0.11.0",
    "cakeshopPort": "8999",
    "configDir": "network/3-nodes-raft-tessera-bash/resources",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "3-nodes-raft-tessera-bash",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.7.0",
    "remoteDebug": false,
    "splunk": false,
    "splunkHecPort": "8088",
    "splunkIp": "127.0.0.1",
    "splunkPort": "8000",
    "transactionManager": "0.10.5",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "graphQlPort": 24000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "graphQlPort": 24001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "graphQlPort": 24002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
  ],
}
`;
